# VulnHunter

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.yml  docker-compose.yml  pyproject.toml
config/: default.yaml  scope.example.yaml
docker/: Dockerfile.sandbox
docs/assets/: README.md  vulnhunter_scanme.nmap.org_20260331_121734.html  vulnhunter_scanme.nmap.org_20260331_121734.json
scripts/: capture_report_screenshot.py
src/vulnhunter/: __init__.py  __main__.py  cli.py  config.py  models.py
src/vulnhunter/agents/: __init__.py  base.py  exploit.py  monitor.py  orchestrator.py  planner.py  recon.py  reporter.py
src/vulnhunter/ai/: __init__.py  prompts.py  provider.py
src/vulnhunter/api/: __init__.py  routes.py
src/vulnhunter/auth/: __init__.py  dependencies.py  jwt.py
src/vulnhunter/db/: __init__.py  engine.py  models.py  repository.py
src/vulnhunter/intelligence/: __init__.py  chain_analyzer.py  mitre_attack.py
src/vulnhunter/memory/: __init__.py  embeddings.py  knowledge.py  store.py
src/vulnhunter/nuclei/: __init__.py  parser.py  profiles.py  template_manager.py
src/vulnhunter/reporting/: __init__.py  bounty_report.py  ci_output.py  cvss.py  html_report.py  json_report.py  pdf_report.py  severity_justification.py
src/vulnhunter/sandbox/: __init__.py  executor.py  manager.py
src/vulnhunter/scope/: __init__.py  manager.py
src/vulnhunter/stealth/: __init__.py  rate_limiter.py  waf_detector.py
src/vulnhunter/tools/: __init__.py  access_control.py  base.py  cors_check.py  cve_lookup.py  dir_brute.py  (+19 more)
(+16 files in other folders)
